Changes from jTDS 0.9.1
=======================

12/16/2004 - Alin Sinpalean
 o Fixed a bug that was causing setSavepoint() to fail when no statements to
   actually start a transaction were executed before.

12/14/2004 - Alin Sinpalean
 o Implemented fetching of row blocks with cursor ResultSets, controllable
   through setFetchSize(). As part of this, also implemented support for
   sending more than one request in one packet.
 o Applied Mike's update to patch [1037237] Windows Single Sign On in jTDS.

12/13/2004 - Alin Sinpalean
 o Applied patch [1037237] Windows Single Sign On in jTDS. Thanks go to
   Magendran Sathaiah and Mike Hutchinson for the original patch and Java code
   rewrite, respectively.

12/09/2004 - Alin Sinpalean
 o Added some tests to verify the behavior of sp_cursorfetch with fetch sizes
   greater than 1.
 o Added code to ensure scroll sensitive ResultSet rows are reloaded after
   updated (delete just marks the row as deleted, while insert adds a row at
   the end of the ResultSet).
 o Fixed some cursor ResultSet issues caused by invalid suppositions considered
   when optimizing (i.e. that updating a row will always delete the current row
   and create a new one at the end of the ResultSet). This will affect update
   performance (by making an additional request) but it is necessary to ensure
   correctness.
 o Updated DatabaseMetaData boolean getters related to the capabilities of
   detecting updates/inserts/deletes (only deletes can in fact be detected on
   SQL Server).

12/08/2004 - Alin Sinpalean
 o Combined connection properties setup in the ConnectionJDBC2 constructor with
   the SELECT @@MAX_PRECISION query into a single request, reducing login
   overhead to only a single request/response.

===============================================================================
12/08/2004 - jTDS 0.9.1 released
===============================================================================

Changes from jTDS 0.9
=====================
