@@ -61,7 +61,7 @@ import net.sourceforge.jtds.util.*;
  *
  * @author Mike Hutchinson
  * @author Alin Sinpalean
- * @version $Id: ConnectionJDBC2.java,v 1.56 2004-12-14 15:00:29 alin_sinpalean Exp $
+ * @version $Id: ConnectionJDBC2.java,v 1.57 2004-12-16 17:39:21 alin_sinpalean Exp $
  */
 public class ConnectionJDBC2 implements java.sql.Connection {
     /**
@@ -1710,19 +1710,18 @@ public class ConnectionJDBC2 implements java.sql.Connection {
 
         if (autoGeneratedKeys != JtdsStatement.RETURN_GENERATED_KEYS &&
             autoGeneratedKeys != JtdsStatement.NO_GENERATED_KEYS) {
-            throw new SQLException(Messages.get("error.generic.badoption",
-                                                      Integer.toString(autoGeneratedKeys),
-                                                      "executeUpate"),
-                                   "HY092");
+            throw new SQLException(
+                    Messages.get("error.generic.badoption",
+                            Integer.toString(autoGeneratedKeys),
+                            "executeUpdate"),
+                    "HY092");
         }
 
-        JtdsPreparedStatement stmt =
-        new JtdsPreparedStatement(this,
-                                  sql,
-                                  java.sql.ResultSet.TYPE_FORWARD_ONLY,
-                                  java.sql.ResultSet.CONCUR_READ_ONLY,
-                                  autoGeneratedKeys ==
-                                  JtdsStatement.RETURN_GENERATED_KEYS);
+        JtdsPreparedStatement stmt = new JtdsPreparedStatement(this,
+                sql,
+                java.sql.ResultSet.TYPE_FORWARD_ONLY,
+                java.sql.ResultSet.CONCUR_READ_ONLY,
+                autoGeneratedKeys == JtdsStatement.RETURN_GENERATED_KEYS);
         addStatement(stmt);
 
         return stmt;
